--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -8,14 +8,14 @@
     >
 
 
-
     <EditText
         android:id="@+id/emailEditText"
-        android:layout_marginTop="200dp"
-        android:hint="Your Email"
-        android:inputType="textEmailAddress"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_marginTop="200dp"
+        android:background="#00C43A3A"
+        android:hint="Your Email"
+        android:inputType="textEmailAddress" />
 
     <EditText
         android:id="@+id/passwordEditText"
@@ -28,11 +28,11 @@
 
     <Button
         android:id="@+id/loginSingUpButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="8dp"
-        android:text="Sign Up"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:text="Sign Up" />
 
     <TextView
         android:id="@+id/toggleLoginSignUpTextView"
